# stellarium

./: CMakeLists.txt  index.json.doc.md
.github/workflows/: bundle-build.yml  ci.yml
plugins/Pulsars/src/gui/: pulsarsDialog.ui
plugins/SkyCultureMaker/: CMakeLists.txt
plugins/SkyCultureMaker/src/: CMakeLists.txt  ScmAsterism.hpp  ScmCommonName.cpp  ScmCommonName.hpp  ScmConstellation.cpp  ScmConstellation.hpp  ScmDraw.cpp  ScmDraw.hpp  ScmMgr.hpp  ScmSkyCulture.cpp  ScmSkyCulture.hpp  ScmTypes.hpp  SkyCultureMaker.cpp  SkyCultureMaker.hpp
plugins/SkyCultureMaker/src/gui/: ScmConstellationDialog.cpp  ScmConstellationDialog.hpp  ScmEditorDialog.cpp  ScmEditorDialog.hpp  ScmSkyCultureDialog.cpp  ScmSkyCultureDialog.hpp  ScmStartDialog.cpp  ScmStartDialog.hpp  StartDialog.cpp  StartDialog.hpp  scmConstellationDialog.ui  scmEditorDialog.ui  scmSkyCultureDialog.ui  startDialog.ui
plugins/SkyCultureMaker/src/types/: ConstellationLine.hpp  CoordinateLine.hpp  StarPoint.hpp
src/core/: StelApp.cpp
